# fixed-width-rs

./: .gitignore  Cargo.toml  README.md
fixed-width-derive/: Cargo.toml
fixed-width-derive/src/: lib.rs  lib.rs.old
src/: any_value.rs  error.rs  lib.rs
src/model/: field_config.rs  mod.rs
tests/: test_bigdecimal.rs  test_bigdecimal2.rs  test_bigdecimal3.rs  test_chrono.rs  test_enum.rs  test_list.rs  test_option.rs  test_simple.rs  test_truncate.rs
